# pallas-dohl

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  code_of_conduct.md  pyproject.toml  requirements.txt
doc/source/: conf.py  dohl.rst  examples.rst  getting-started.rst  index.rst  modules.rst
examples/: create_env  damping_power.py  requirements.txt  safe_border_line.py  work_in_progress.py
src/dohl/: _fatigue_model_input.py  config.ini  config.py  damage.py  damping_power_data.yaml  ebp.py  lifespan.py  qreg_input.csv  raw_def_conductor_layers.csv  raw_fatigue_conductors.csv  stockbridge.py  wind_power_data.yaml
