[build-system]
requires = [
    "setuptools>=40.8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dohl"
version = "2024.0.0"
authors = [
    { name = "Rte R&D and Mews Labs", email = "emmanuel.cieren@mews-labs.com" },
]
description = "Damage in Overhead Lines application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0",
]
dependencies = [
    "numpy >= 1.21.2",
    "pandas >= 1.4.1",
    "pyyaml >= 5.4.1",
    "scikit-learn >= 1.3.2",
]

[project.optional-dependencies]
doc = ["sphinx", "sphinx_rtd_theme"]
examples = ["matplotlib >= 3.4.3", ]
#test = ["pytest", "pylint"]

[project.urls]
"Homepage" = "https://github.com/rte-france/pallas-dohl"
"Bug Tracker" = "https://github.com/rte-france/pallas-dohl/issues"
